Imported from https://teluskotraining02@github.com/teluskotraining02/tusk.git

--- a/project.config
+++ b/project.config
@@ -1,2 +1,20 @@
 [access]
 	inheritFrom = All-Projects
+[access "refs/*"]
+	owner = group user/teluskotraining02
+[access "refs/for/refs/*"]
+	read = group user/teluskotraining02
+	push = group user/teluskotraining02
+	label-Code-Review = -2..+2 group user/teluskotraining02
+	label-Verified = -1..+1 group user/teluskotraining02
+	rebase = group user/teluskotraining02
+	removeReviewer = group user/teluskotraining02
+	submit = group user/teluskotraining02
+[access "refs/heads/*"]
+	read = group user/teluskotraining02
+	create = group user/teluskotraining02
+	push = +force group user/teluskotraining02
+	pushMerge = group user/teluskotraining02
+[access "refs/tags/*"]
+	push = group user/teluskotraining02
+	push = +force group user/teluskotraining02
